# FAS2016

./: .gitmodules  README.md
CourseNotes/: MathPrelim.tex  assessingSamplingPatterns.tex  bibliography.bib  blueNoise.tex  macros-gurprit.tex  macros.tex  main.tex  manifestationErrorRendering.tex  software.tex  structure.tex  table-schedule.tex  templateEx.tex
CourseNotes/Pictures/: fig-bluenoise-powspec-radialmean.tex  fig-points-grid-visualization.tex  fig-points-powspec-radialmean.tex  fig-powspec-radialmean-bluenoise.tex  fig-powspec-radialmean-deterministic.tex  fig-powspec-radialmean-jitter.tex  fig-powspec-radialmean-multijitter.tex  fig-powspec-radialmean-nrooks.tex  fig-powspec-radialmean-random.tex  fig-powspec-radialmean-stochastic.tex
CourseNotes/SectionCanonicalDomain/: generalDomain.tex  gradientDomain.tex  sphericalDomain.tex
CourseNotes/figs/: pointset-stratified-n1024-000001.eps  pointset-stratified-n1024-000002.eps  pointset-stratified-n1024-000003.eps
CourseSchedule/: acmsiggraph.cls  main-summary.tex  main.tex  schedule.tex  summary-googledoc.tex  table-schedule-rough.tex  table-schedule.tex
PBRTOut/: testmb_ball.scene_GRID_16_Samps_iter_1_1_uj.exr  testmb_ball.scene_GRID_2_Samps_iter_1_1_uj.exr  testmb_ball.scene_GRID_4_Samps_iter_1_1_uj.exr  testmb_ball.scene_GRID_64_Samps_iter_1_1_uj.exr  testmb_ball.scene_GRID_8_Samps_iter_1_1_uj.exr  testmb_ball.scene_LD_16_Samps_iter_1__uj.exr  testmb_ball.scene_LD_256_Samps_iter_1__uj.exr  testmb_ball.scene_LD_4096_Samps_iter_1__uj.exr  testmb_ball.scene_LD_4_Samps_iter_1__uj.exr  testmb_ball.scene_LD_64_Samps_iter_1__uj.exr  testmb_ball.scene_RAND_16_Samps_iter_1__uj.exr  testmb_ball.scene_RAND_256_Samps_iter_1__uj.exr  testmb_ball.scene_RAND_4096_Samps_iter_1__uj.exr  testmb_ball.scene_RAND_4_Samps_iter_1__uj.exr  testmb_ball.scene_RAND_64_Samps_iter_1__uj.exr
SampleCourseSlides/: SiggraphCourseConclusion2016.pptx
Scenes/: Cu.k.spd  testmb_ball.scene  testmb_ball.scene~  tmp_testmb_ball.scene.pbrt
TwoPageAbstract/: 2abs.bib  2abs.tex
code/: CMakeLists.txt  README.txt
code-visualization/: README.txt  common.pri  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  other-plots.cpp  read-points.cpp  visualization.pro
code-visualization/core/: create-folders.cpp  io.h  utils.h
code/Analysis/: CMakeLists.txt  README.md
code/Analysis/matlab/: CollectConvData.m  GenIntegStruct.m  PlotConvData.m  cells1.m
code/Analysis/python/: pbrt-cl-new.py  pbrt-cl.py
code/Analysis/src/analyzer/: Analyzer.cpp  Analyzer.h  FourierAnalyzer.cpp  FourierAnalyzer.h  MSEAnalyzer.cpp  MSEAnalyzer.h  PointAnalyzer.cpp  PointAnalyzer.h  VarianceAnalyzer.cpp  VarianceAnalyzer.h
code/Analysis/src/core/: cmdlnparser.cpp  common.cpp  common.h  point2d.h  write-exr.cpp
code/Analysis/src/integrand/: DiskIntegrand.cpp  GaussianIntegrand.cpp  PBRTIntegrand.cpp  PBRTIntegrand.h  integrand.cpp  integrand.h
code/Analysis/src/main/: main.cxx  test.cxx
code/Analysis/src/sampler/: sampler.cpp  sampler.h  toroidal-pointsamples.cxx
code/EmpErrAnalysis/eea/: CMakeLists.txt  README.txt  eea.kdev4
code/EmpErrAnalysis/eea/.kdev4/: eea.kdev4
code/EmpErrAnalysis/eea/cpp/: Analyzer.cpp  DataMat.cpp  DiskIntegrand.cpp  GaussianIntegrand.cpp  PBRTIntegrand.cpp  PWConstIntegrand.cpp  QPIntegrand.cpp  cmdlnparser.cpp  integrand.cpp  main.cpp  randsampgsl.cpp  samples.cpp
code/EmpErrAnalysis/eea/include/: Analyzer.h  DataMat.h  DiskIntegrand.h  GaussianIntegrand.h  PBRTIntegrand.h  PWConstIntegrand.h  QPIntegrand.h  cmdlnparser.h  integrand.h  newanalyzer.cpp  newanalyzer.h  point2d.h  randsampgsl.h  samples.h
code/EmpErrAnalysis/matlab/: CollectConvData.m  PlotConvData.m  cells1.m
code/EmpErrAnalysis/python/: anim-killeroos.pbrt  pbrt-cl.py  pbrtCropWindow.py
code/config/: Config.h  Config.h.in
code/src/core/: constants.h  core.h  utils.h
code/src/demos/fourier-analysis-demos/: fourier-analysis-demos.cmake  powspec-cft-demo1.cxx  powspec-cft-lowdiscrepancy-demo1.cxx  powspec-demo1.cxx  powspec-dft-demo1.cxx  powspec-dft-lowdiscrepancy-demo1.cxx  powspec-lowdiscrepancy-demo1.cxx
code/src/demos/homogenization-demos/: homogenization-complexcoeffs-demo1.cxx  homogenization-demos.cmake
code/src/demos/pointset-demos/: pointset-demo1.cxx  pointset-demos.cmake
code/src/fourier-analysis/: anisotropy-sampler-powerspecrtum.cpp  continuous-fourier-transform.cpp  discrete-fourier-transform.cpp  fft.h  fourier-analysis.cpp  fourier-analysis.h  perform-dft.cpp  radial-spectrum.cpp  swap-quadrants.cpp
code/src/fourier-analysis/nouse/: fft.cpp
code/src/io/: read-image.cpp  read-image.h  read-pointset.cpp  read-pointset.h  write-eps.cpp  write-exr.cpp  write-exr.h  write-image.h  write-png.cpp  write-png.h
code/src/sampler-points/: dartthrowing-sampler.cpp  halton-hammerslay-sampler.cpp  halton-sampler.cpp  homogenize-pointsamples.cpp  homogenize-pointsamples.cxx  low-discrepancy-samplers.cpp  multijitter-sampler.cpp  nrooks-sampler.cpp  sampler-bluenoise.cpp  sampler-points.cpp  sampler-points.h
code/src/sampler-points/halton/: halton_sampler.h
shell-scripts/: ProcessExrs.sh  RenderMB.sh  RunPBRT.sh  generate-radial-mean.sh  run-points-grid-visualization.sh
(+976 files in other folders)
